--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "streamlit"
+name = "streamlit-conn"
 version = "0.1.0"
 description = ""
 authors = ["Bharath Muthineni <bharathmuthineni1997@gmail.com>"]
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+streamlit = "^1.25.0"
+weaviate-client = "3.15.6"
 
 
 [build-system]
